languages/sysml/LanguageParser.py
# Generated from languages/sysml/Language.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LanguageParser ( Parser ):

    grammarFileName = "Language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "','", "'='", "'.'", 
                     "':'", "'*'", "'about'", "'actor'", "'attribute'", 
                     "'case'", "'comment'", "'connection'", "'connect'", 
                     "'def'", "'doc'", "'from'", "'end'", "'import'", "'include'", 
                     "'item'", "'message'", "'objective'", "'package'", 
                     "'part'", "'port'", "'ref'", "'redefines'", "'specializes'", 
                     "'subject'", "'subsets'", "'::'", "':>>'", "':>'", 
                     "'to'", "'use'", "'in'", "'out'", "'of'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "KW_ABOUT", "KW_ACTOR", "KW_ATTRIBUTE", 
                      "KW_CASE", "KW_COMMENT", "KW_CONNECTION", "KW_CONNECT", 
                      "KW_DEF", "KW_DOC", "KW_FROM", "KW_END", "KW_IMPORT", 
                      "KW_INCLUDE", "KW_ITEM", "KW_MESSAGE", "KW_OBJECTIVE", 
                      "KW_PACKAGE", "KW_PART", "KW_PORT", "KW_REF", "KW_REDEFINES", 
                      "KW_SPECIALIZES", "KW_SUBJECT", "KW_SUBSETS", "KW_SYM_FQN", 
                      "KW_SYM_REDEFINES", "KW_SYM_SUBSETS", "KW_TO", "KW_USE", 
                      "KW_IN", "KW_OUT", "KW_OF", "CONSTANT", "TYPE", "ID", 
                      "INTEGER", "REAL", "BOOL", "STRING", "MULTIPLICITY", 
                      "NULL", "WS", "NOTE", "COMMENT_LONG" ]

    RULE_main = 0
    RULE_model = 1
    RULE_element = 2
    RULE_namespace = 3
    RULE_sysml2_package = 4
    RULE_part_blk = 5
    RULE_part = 6
    RULE_part_def = 7
    RULE_part_def_specializes = 8
    RULE_port = 9
    RULE_port_def = 10
    RULE_port_blk = 11
    RULE_use_case_blk = 12
    RULE_use_case_def = 13
    RULE_part_objective_blk = 14
    RULE_objective_def = 15
    RULE_subject_def = 16
    RULE_include = 17
    RULE_include_blk = 18
    RULE_message = 19
    RULE_message_expr = 20
    RULE_feature = 21
    RULE_connection = 22
    RULE_connection_blk = 23
    RULE_end_part = 24
    RULE_connect = 25
    RULE_connect_expr = 26
    RULE_feature_attribute_def = 27
    RULE_feature_attribute_redefines = 28
    RULE_feature_part_specializes = 29
    RULE_feature_part_specializes_subsets = 30
    RULE_feature_item_def = 31
    RULE_feature_item_ref = 32
    RULE_feature_actor_specializes = 33
    RULE_comment = 34
    RULE_comment_unnamed = 35
    RULE_comment_named = 36
    RULE_comment_named_about = 37
    RULE_doc = 38
    RULE_doc_unnamed = 39
    RULE_doc_named = 40
    RULE_statement = 41
    RULE_import_package = 42

    ruleNames =  [ "main", "model", "element", "namespace", "sysml2_package", 
                   "part_blk", "part", "part_def", "part_def_specializes", 
                   "port", "port_def", "port_blk", "use_case_blk", "use_case_def", 
                   "part_objective_blk", "objective_def", "subject_def", 
                   "include", "include_blk", "message", "message_expr", 
                   "feature", "connection", "connection_blk", "end_part", 
                   "connect", "connect_expr", "feature_attribute_def", "feature_attribute_redefines", 
                   "feature_part_specializes", "feature_part_specializes_subsets", 
                   "feature_item_def", "feature_item_ref", "feature_actor_specializes", 
                   "comment", "comment_unnamed", "comment_named", "comment_named_about", 
                   "doc", "doc_unnamed", "doc_named", "statement", "import_package" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    KW_ABOUT=9
    KW_ACTOR=10
    KW_ATTRIBUTE=11
    KW_CASE=12
    KW_COMMENT=13
    KW_CONNECTION=14
    KW_CONNECT=15
    KW_DEF=16
    KW_DOC=17
    KW_FROM=18
    KW_END=19
    KW_IMPORT=20
    KW_INCLUDE=21
    KW_ITEM=22
    KW_MESSAGE=23
    KW_OBJECTIVE=24
    KW_PACKAGE=25
    KW_PART=26
    KW_PORT=27
    KW_REF=28
    KW_REDEFINES=29
    KW_SPECIALIZES=30
    KW_SUBJECT=31
    KW_SUBSETS=32
    KW_SYM_FQN=33
    KW_SYM_REDEFINES=34
    KW_SYM_SUBSETS=35
    KW_TO=36
    KW_USE=37
    KW_IN=38
    KW_OUT=39
    KW_OF=40
    CONSTANT=41
    TYPE=42
    ID=43
    INTEGER=44
    REAL=45
    BOOL=46
    STRING=47
    MULTIPLICITY=48
    NULL=49
    WS=50
    NOTE=51
    COMMENT_LONG=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def model(self):
            return self.getTypedRuleContext(LanguageParser.ModelContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_main

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = LanguageParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.model()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LanguageParser.EOF, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ElementContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ElementContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_model

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel" ):
                return visitor.visitModel(self)
            else:
                return visitor.visitChildren(self)




    def model(self):

        localctx = LanguageParser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4504562208779264) != 0):
                self.state = 88
                self.element()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(LanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespace(self):
            return self.getTypedRuleContext(LanguageParser.NamespaceContext,0)


        def feature(self):
            return self.getTypedRuleContext(LanguageParser.FeatureContext,0)


        def comment(self):
            return self.getTypedRuleContext(LanguageParser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(LanguageParser.DocContext,0)


        def statement(self):
            return self.getTypedRuleContext(LanguageParser.StatementContext,0)


        def port(self):
            return self.getTypedRuleContext(LanguageParser.PortContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = LanguageParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_element)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.namespace()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.feature()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.comment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.doc()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 101
                self.port()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sysml2_package(self):
            return self.getTypedRuleContext(LanguageParser.Sysml2_packageContext,0)


        def part(self):
            return self.getTypedRuleContext(LanguageParser.PartContext,0)


        def use_case_def(self):
            return self.getTypedRuleContext(LanguageParser.Use_case_defContext,0)


        def comment(self):
            return self.getTypedRuleContext(LanguageParser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(LanguageParser.DocContext,0)


        def port(self):
            return self.getTypedRuleContext(LanguageParser.PortContext,0)


        def connect(self):
            return self.getTypedRuleContext(LanguageParser.ConnectContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_namespace

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespace" ):
                return visitor.visitNamespace(self)
            else:
                return visitor.visitChildren(self)




    def namespace(self):

        localctx = LanguageParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_namespace)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.sysml2_package()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.part()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.use_case_def()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.comment()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.doc()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.port()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 110
                self.connect()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sysml2_packageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PACKAGE(self):
            return self.getToken(LanguageParser.KW_PACKAGE, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def namespace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.NamespaceContext)
            else:
                return self.getTypedRuleContext(LanguageParser.NamespaceContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_sysml2_package

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSysml2_package" ):
                return visitor.visitSysml2_package(self)
            else:
                return visitor.visitChildren(self)




    def sysml2_package(self):

        localctx = LanguageParser.Sysml2_packageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sysml2_package)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(LanguageParser.KW_PACKAGE)
            self.state = 114
            self.match(LanguageParser.ID)
            self.state = 115
            self.match(LanguageParser.T__0)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4504562207730688) != 0):
                self.state = 116
                self.namespace()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(LanguageParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Part_blkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def feature(self):
            return self.getTypedRuleContext(LanguageParser.FeatureContext,0)


        def comment(self):
            return self.getTypedRuleContext(LanguageParser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(LanguageParser.DocContext,0)


        def part(self):
            return self.getTypedRuleContext(LanguageParser.PartContext,0)


        def port(self):
            return self.getTypedRuleContext(LanguageParser.PortContext,0)


        def connect(self):
            return self.getTypedRuleContext(LanguageParser.ConnectContext,0)


        def connection(self):
            return self.getTypedRuleContext(LanguageParser.ConnectionContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_part_blk

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart_blk" ):
                return visitor.visitPart_blk(self)
            else:
                return visitor.visitChildren(self)




    def part_blk(self):

        localctx = LanguageParser.Part_blkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_part_blk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 124
                self.feature()
                pass

            elif la_ == 2:
                self.state = 125
                self.comment()
                pass

            elif la_ == 3:
                self.state = 126
                self.doc()
                pass

            elif la_ == 4:
                self.state = 127
                self.part()
                pass

            elif la_ == 5:
                self.state = 128
                self.port()
                pass

            elif la_ == 6:
                self.state = 129
                self.connect()
                pass

            elif la_ == 7:
                self.state = 130
                self.connection()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def part_def(self):
            return self.getTypedRuleContext(LanguageParser.Part_defContext,0)


        def part_def_specializes(self):
            return self.getTypedRuleContext(LanguageParser.Part_def_specializesContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart" ):
                return visitor.visitPart(self)
            else:
                return visitor.visitChildren(self)




    def part(self):

        localctx = LanguageParser.PartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_part)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 133
                self.part_def()
                pass

            elif la_ == 2:
                self.state = 134
                self.part_def_specializes()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Part_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PART(self):
            return self.getToken(LanguageParser.KW_PART, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def KW_DEF(self):
            return self.getToken(LanguageParser.KW_DEF, 0)

        def part_blk(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.Part_blkContext)
            else:
                return self.getTypedRuleContext(LanguageParser.Part_blkContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_part_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart_def" ):
                return visitor.visitPart_def(self)
            else:
                return visitor.visitChildren(self)




    def part_def(self):

        localctx = LanguageParser.Part_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_part_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 137
                self.match(LanguageParser.KW_PART)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16:
                    self.state = 138
                    self.match(LanguageParser.KW_DEF)


                self.state = 141
                self.match(LanguageParser.ID)
                self.state = 142
                self.match(LanguageParser.T__0)
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4504424735239168) != 0):
                    self.state = 143
                    self.part_blk()
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 149
                self.match(LanguageParser.T__1)
                pass

            elif la_ == 2:
                self.state = 150
                self.match(LanguageParser.KW_PART)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16:
                    self.state = 151
                    self.match(LanguageParser.KW_DEF)


                self.state = 154
                self.match(LanguageParser.ID)
                self.state = 155
                self.match(LanguageParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Part_def_specializesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PART(self):
            return self.getToken(LanguageParser.KW_PART, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.ID)
            else:
                return self.getToken(LanguageParser.ID, i)

        def KW_SPECIALIZES(self):
            return self.getToken(LanguageParser.KW_SPECIALIZES, 0)

        def KW_SYM_SUBSETS(self):
            return self.getToken(LanguageParser.KW_SYM_SUBSETS, 0)

        def KW_DEF(self):
            return self.getToken(LanguageParser.KW_DEF, 0)

        def part_blk(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.Part_blkContext)
            else:
                return self.getTypedRuleContext(LanguageParser.Part_blkContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_part_def_specializes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart_def_specializes" ):
                return visitor.visitPart_def_specializes(self)
            else:
                return visitor.visitChildren(self)




    def part_def_specializes(self):

        localctx = LanguageParser.Part_def_specializesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_part_def_specializes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(LanguageParser.KW_PART)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 159
                self.match(LanguageParser.KW_DEF)


            self.state = 162
            self.match(LanguageParser.ID)
            self.state = 163
            _la = self._input.LA(1)
            if not(_la==30 or _la==35):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 164
            self.match(LanguageParser.ID)
            self.state = 169
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 165
                    self.match(LanguageParser.T__3)
                    self.state = 166
                    self.match(LanguageParser.ID) 
                self.state = 171
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 172
                self.match(LanguageParser.T__0)
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4504424735239168) != 0):
                    self.state = 173
                    self.part_blk()
                    self.state = 178
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 179
                self.match(LanguageParser.T__1)
                pass
            elif token in [3]:
                self.state = 180
                self.match(LanguageParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def port_def(self):
            return self.getTypedRuleContext(LanguageParser.Port_defContext,0)


        def port_blk(self):
            return self.getTypedRuleContext(LanguageParser.Port_blkContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_port

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPort" ):
                return visitor.visitPort(self)
            else:
                return visitor.visitChildren(self)




    def port(self):

        localctx = LanguageParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_port)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27, 38, 39]:
                self.state = 183
                self.port_def()
                pass
            elif token in [10, 11, 13, 17, 22, 26, 28, 52]:
                self.state = 184
                self.port_blk()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
